02_library_and_test: fix library -> librarys

--- a/02_library_and_test/LibraryAndTestExercise.ipynb
+++ b/02_library_and_test/LibraryAndTestExercise.ipynb
@@ -27,9 +27,9 @@
     "\n",
     "7. Add a py_test target for converter_test.py. Call it converter_test and add the dependencies this code need. \n",
     "\n",
-    "8. Run the test by running `bazelisk run //library:converter_test`\n",
+    "8. Run the test by running `bazelisk run //librarys:converter_test`\n",
     "\n",
-    "9. Test is directly by running `bazelisk test //library:converter_test` and notice the difference compared to the run target.\n",
+    "9. Test is directly by running `bazelisk test //librarys:converter_test` and notice the difference compared to the run target.\n",
     "\n",
     "10. Test all test targets in your bazel project by running `bazelisk test //...` "
    ]
